package com.lld.interviewquestions.carrental.payment;

public enum PaymentMode {
    CASH,
    ONLINE,
    UPI
}

