package com.lld.interviewquestions.carrental.product;

public enum VehicleStatus {
    AVAILABLE,
    BOOKED,
    MAINTENANCE
}

